tests/samples/negative/pointers/unsafe_bitcast_required.ax
module unsafe_bitcast_required;

fn main() -> i32 {
    let value: f32 = bitcast<f32>(cast<u32>(0));
    return cast<i32>(value);
}
